--- a/solutions/linear/19.tex
+++ b/solutions/linear/19.tex
@@ -30,26 +30,28 @@
 
 Пусть дана матрица квадратичной формы. Рассмотрим случаи:
 \begin{enumerate}
-    \item $b_{11} \neq 0$. Занулим весь столбец снизу вычитанием из каждой строки первой, домноженной на определенный коэффициент (делая одновеременно симметричную операцию со столбцами). Затем делаем $b_{11}$ равным $\pm 1$ делением на $\sqrt{|b_{11}|}$ первой строки и первого столбца.
-    \item $b_{11} = 0$. Тогда рассмотрим три подслучая:
-        \begin{enumerate}
-            \item Справа и снизу нули, значит, идем далее.
-            \item $\exists i \in 2 \dots n: b_{ii} \neq 0$. Тогда поменяем 1-ую и $i$-ую строку местами, а затем 1 и $i$-ый столбец.  Потом переходим к первому случаю $b_{11} \neq 0$.
-            \item $\exists i \in 2 \dots n: b_{i1} \neq 0$. Тогда добавим $i$-ую строку к первой, а затем $i$-ый столбец к первому. Потом переходим к первому случаю $b_{11} \neq 0$.
-        \end{enumerate}
+  \item $b_{11} \neq 0$. Занулим весь столбец снизу вычитанием из каждой строки первой, домноженной на определенный коэффициент (делая одновеременно симметричную
+    операцию со столбцами). Затем делаем $b_{11}$ равным $\pm 1$ делением на $\sqrt{|b_{11}|}$ первой строки и первого столбца.
+  \item $b_{11} = 0$. Тогда рассмотрим три подслучая:
+    \begin{enumerate}
+      \item Справа и снизу нули, значит, идем далее.
+      \item $\exists i \in 2 \dots n: b_{ii} \neq 0$. Тогда поменяем 1-ую и $i$-ую строку местами, а затем 1 и $i$-ый столбец.  Потом переходим к первому случаю $b_{11} \neq 0$.
+      \item $\exists i \in 2 \dots n: b_{i1} \neq 0$. Тогда добавим $i$-ую строку к первой, а затем $i$-ый столбец к первому. Потом переходим к первому случаю $b_{11} \neq 0$.
+    \end{enumerate}
 \end{enumerate}
 
 Заметим, что после выполнения алгоритма выше матрица примет следующий вид:
 \begin{equation*}
-    \begin{pmatrix}
-        \pm 1 & 0 & \dots & 0 \\
-        0 & & & \\
-        \vdots & & C & \\
-        0 & & &
-        \end{pmatrix}
+  \begin{pmatrix}
+    \pm 1 & 0 & \dots & 0 \\
+    0 & & & \\
+    \vdots & & C & \\
+    0 & & &
+  \end{pmatrix}
 \end{equation*}
-Ясно, что $C$ симметричная матрица в силу операций выше, поэтому применим алгоритм рекурсивно к ней. 
-Если мы будем делать аналогичные действия над строками единичной матрицы, то получим матрицу перехода к базису (она невырождена в силу того, что мы выполняли только лишь элементарные преобразования), в котором форма имеет канонический вид.
+Ясно, что $C$ симметричная матрица в силу операций выше, поэтому применим алгоритм рекурсивно к ней.
+Если мы будем делать аналогичные действия над строками единичной матрицы, то получим матрицу перехода к базису (она невырождена в силу того, что мы выполняли только лишь
+элементарные преобразования), в котором форма имеет канонический вид.
 Заметим, что в силу того, что мы выполняли элементарные преобразования, матрица перехода невырождена
 
 \Endproof
@@ -124,25 +126,28 @@
 
 Покажем (1).
 
-Пусть $k$ положительно определена. Перейдем к каноническому виду с помощью алгоритма из теоремы о приведении КФ к каноническому виду. 
-В силу того, что во процессе перехода к всякой строке может быть только добавлена строка выше, а ко всякому столбцу -- столбец левее, значит по сути с точки зрения подматрицы $B[1:k][1:k]$ \textit{мы делаем элементарные преобразования, примененные к строкам и столбцам одновременно, которые не меняют знак определителя}.
-Пусть мы привели $B$ к каноническому виду $B^K$. Тогда, в силу положительной определенности, $\Delta_n\left(B^K\right) = \prod\limits_{k=1}^n \underbrace{b_k}_{>0} > 0 \Rightarrow \Delta_n(B) > 0$.
+Пусть $k$ положительно определена. Перейдем к каноническому виду с помощью алгоритма из теоремы о приведении КФ к каноническому виду.
+В силу того, что во процессе перехода к всякой строке может быть только добавлена строка выше, а ко всякому столбцу -- столбец левее, значит по сути с точки зрения
+подматрицы $B[1:k][1:k]$ \textit{мы делаем элементарные преобразования, примененные к строкам и столбцам одновременно, которые не меняют знак определителя}.
+Пусть мы привели $B$ к каноническому виду $B^K$. Тогда, в силу положительной определенности, $\Delta_n\left(B^K\right) = \prod\limits_{k=1}^n \underbrace{b_k}_{>0} > 0
+\Rightarrow \Delta_n(B) > 0$.
 
-В другую сторону, пусть все миноры матрицы положительны. Тогда в частности $\Delta_1(B) > 0$. Опять будем использовать тот же алгоритм из теоремы о приведении КФ к каноническому виду.
+В другую сторону, пусть все миноры матрицы положительны. Тогда в частности $\Delta_1(B) > 0$. Опять будем использовать тот же алгоритм из теоремы о приведении КФ к
+каноническому виду.
 После первого шага, мы будем иметь матрицу вида:
 \begin{equation*}
-    \begin{pmatrix}
-        1 & 0 & \dots & 0 \\
-        0 & & & \\
-        \vdots & & C & \\
-        0 & & &
-        \end{pmatrix}
+  \begin{pmatrix}
+    1 & 0 & \dots & 0 \\
+    0 & & & \\
+    \vdots & & C & \\
+    0 & & &
+  \end{pmatrix}
 \end{equation*}
-В силу того, что мы применили элементарные преобразования парно, знак определителя не поменялся. Тогда $\Delta_2 (B') = 1 \cdot b_2' > 0 \Rightarrow b_2 ' > 0$, т.к. $\Delta_2 (B) > 0$. Значит рекурсивно применим рассуждения и для подматрицы $C$.
+В силу того, что мы применили элементарные преобразования парно, знак определителя не поменялся. Тогда $\Delta_2 (B') = 1 \cdot b_2' > 0 \Rightarrow b_2 ' > 0$, т.к.
+$\Delta_2 (B) > 0$. Значит рекурсивно применим рассуждения и для подматрицы $C$.
 В итоге мы получим единичную матрицу, значит исходная форма положительно определена.
 
 Покажем (2). Пусть $k(x)$ отрицательно определена. Значит $-k(x)$ - положительно определена. Применим утверждение $(1)$ вместе с тем фактом, что $\det(-A) = (-1)^n \det
 A$, и получим требуемое.
-
 
 \Endproof
