--- a/solutions/logic/33.tex
+++ b/solutions/logic/33.tex
@@ -129,7 +129,7 @@ $\blacksquare$
 
 \Def
 
-$R(n) :=$ \\ Количество единиц, которое может вывести на ленту и остановиться МТ с не более чем $n$ состояниями, начиная с пустого входа.
+$R(n) :=$ \ Количество единиц, которое может вывести на ленту и остановиться МТ с не более чем $n$ состояниями, начиная с пустого входа.
 
 \Statement
 
