--- a/solutions/differential/20.tex
+++ b/solutions/differential/20.tex
@@ -437,7 +437,7 @@ $\chi(\lambda) = \xi(\lambda) \cdot (\lambda - \mu)^s$, где $\xi(\mu) \neq 0$
 Покажем, что $\chi(D): Q_{\mu, m}^s \rightarrow Q_{\mu, m}$ -- биекция.
 
 \begin{enumerate}
-  \item Возьмем базис $e_j(x) = \frac{e^{\mu x} x^{j-1}}{(j-1)!}, j=1, \dots, m $ в $Q_{\mu, m+s}$.
+  \item Возьмем базис $e_j(x) = \frac{e^{\mu x} x^{j-1}}{(j-1)!}, j=1, \dots, m+s $ в $Q_{\mu, m+s}$.
     \begin{align*}
       D(e_1(x)) &= \mu e_1(x),\\
       D(e_j(x)) &= \mu e_j(x) + e_{j-1}(x), \quad j \geq 2.
