--- a/solutions/differential/22.tex
+++ b/solutions/differential/22.tex
@@ -93,7 +93,7 @@ $(3\rightarrow 1)$: Пусть $\exists t_i \in I: W_{x_1, \dots, x_n}(t_0) = 0$
 Раз $x \equiv 0$, значит $x_1, \dots, x_n$ - ЛЗ.
 
 \Lemma
-$\hat{W}(t) = \tr A(t) \cdot W(t)$
+$\dot{W}(t) = \tr A(t) \cdot W(t)$
 
 \Proof
 
