--- a/solutions/logic/31.tex
+++ b/solutions/logic/31.tex
@@ -6,13 +6,12 @@
 
 \begin{enumerate}
   \item $a \mathrel{\vdots} b, b \ne 0$, если $\exists c : a = b \cdot c$, т.е $b$ является делителем $a$.
-  \item $a \mid d \iff \exists k : d = a \cdot m$, т.е $a$ является делителем $d$.
   \item $a$ делится на $b \ne 0$ с остатком $r$, где $0 \le r < |b|$, если $\exists q: a = bq + r$.
   \item Число $p$ называется \textbf{простым}, если не имеет натуральных делителей кроме $1$ и $p$. В противном случае называется \textbf{составным}. Единицу принято
     считать не простым и не составным.
   \item $(a, b) := d \in \mathbb{N}$, если $a = a'd$, $b = b'd$ и $d$ --- наибольший (является делителем любого другого).
   \item Если $(a, b) = 1$, то такие числа называют взаимнопростыми.
-  \item (Лемма Евклида.) Пусть $(a, b) = 1$ и $a \mid (bc)$. Тогда $a \mid c$.
+  \item Пусть $(a, b) = 1, a \cdot b \vdots c$. Тогда $c \vdots b$.
   \item $[a, b]$ --- наименьшее $m \in \mathbb{N}: m \mathrel{\vdots} a, m \mathrel{\vdots} b$.
     $(a, b) \cdot [a, b] = a \cdot b$.
   \item \textbf{Основная теорема арифметики.} Любое $m \in \mathbb{N}$ единственным образом представимо в виде произведения простых делителей
