more minor fixes

--- a/solutions/harmonic/14.tex
+++ b/solutions/harmonic/14.tex
@@ -110,11 +110,11 @@
 
 Первая скобка стремится к 0, так как ряд $\sum_{k=1}^{+\infty} \gamma_k^2$ сходится.
 
-Вторая скобка оценить через интегральный признак:
+Вторая скобка оценивается через интегральный признак:
 
 \begin{gather*}
-  (\sum_{|k| \geq n+1}^{+\infty} \frac{1}{k^{2m}})^{\frac{1}{2}} \leq (\int_n^{+\infty} \frac{1}{x^{2m}} dx)^{\frac{1}{2}} = (\frac{1}{2m-1}
-  \frac{1}{n^{2m-1}})^{\frac{1}{2}} = \sqrt{\frac{1}{2m-1}} \frac{1}{n^{m-\frac{1}{2}}}.
+  \left(\sum_{|k| \geq n+1}^{+\infty} \frac{1}{k^{2m}}\right)^{\frac{1}{2}} \leq \left(\int_n^{+\infty} \frac{1}{x^{2m}} dx\right)^{\frac{1}{2}} = \left(\frac{1}{2m-1}
+  \frac{1}{n^{2m-1}}\right)^{\frac{1}{2}} = \sqrt{\frac{1}{2m-1}} \frac{1}{n^{m-\frac{1}{2}}}.
 \end{gather*}
 
 В качестве $\delta_n$ берем первую скобку умноженную на $\sqrt{\frac{1}{2m-1}}$ и получаем искомое.
