--- a/solutions/statistics/40.tex
+++ b/solutions/statistics/40.tex
@@ -110,7 +110,7 @@
   \mathbb{P}_1(X \in R) - \lambda \mathbb{P}_0(X \in R) \leq \mathbb{P}_1(X \in S_\lambda) - \lambda \mathbb{P}_0(X \in S_\lambda)
 \end{equation*}
 \begin{equation*}
-  \mathbb{P}_1(X \in R) - \mathbb{P}_1(X \in S_\lambda) \leq \lambda(\mathbb{P}_0(X \in S_\lambda) - \mathbb{P}_0(X \in S_\lambda)) \leq 0
+  \mathbb{P}_1(X \in R) - \mathbb{P}_1(X \in S_\lambda) \leq \lambda(\mathbb{P}_0(X \in R) - \mathbb{P}_0(X \in S_\lambda)) \leq 0
 \end{equation*}
 \begin{equation*}
   \mathbb{P}_1(X \in R) - \mathbb{P}_1(X \in S_\lambda) \leq 0
