--- a/solutions/statistics/common.tex
+++ b/solutions/statistics/common.tex
@@ -19,8 +19,6 @@
 
 \textbf{Замечание.} Иерархия: п.н. $\Rightarrow$ по вероятности $\Rightarrow$ по распределению. Обратные импликации в общем случае неверны.
 
-\textbf{Усиленный закон больших чисел}
-
 \Theor{Усиленный ЗБЧ (Колмогорова)}
 
 Пусть $X_1, X_2, \ldots$ — независимые одинаково распределённые случайные величины с $\mathbb{E}|X_1| < \infty$. Тогда
@@ -29,8 +27,6 @@
 \]
 
 \textbf{Замечание.} В отличие от ЗБЧ Чебышева, здесь сходимость почти наверное (более сильная), и достаточно конечности первого момента (не второго).
-
-\textbf{Теорема о наследовании сходимости}
 
 \Theor{О непрерывном отображении}
 
@@ -41,9 +37,7 @@
 
 \textbf{Замечание.} Непрерывное отображение сохраняет тип сходимости.
 
-\textbf{Лемма Слуцкого}
-
-\Lemma{Слуцкого}
+\Lem{Слуцкого}
 
 Пусть $\xi_n \xrightarrow{d} \xi$ и $\eta_n \xrightarrow{P} c$ (константа). Тогда:
 \begin{enumerate}
@@ -53,8 +47,6 @@
 \end{enumerate}
 
 \textbf{Замечание.} Лемма Слуцкого позволяет заменять случайные величины, сходящиеся к константе, на саму константу при вычислении предельного распределения.
-
-\textbf{Наследование асимптотической нормальности}
 
 \Theor{Наследование асимптотической нормальности}
 
