--- a/solutions/linear/15.tex
+++ b/solutions/linear/15.tex
@@ -151,7 +151,7 @@
 
 Расстояние от точки $M(x_1, y_1, z_1)$ до плоскости, заданной в прямоугольной системе координат уравнением $3$ равно
 \begin{equation*}
-  \frac{|Ax_1+By_1+Cz_1|}{\sqrt{A^2+B^2+C^2}}
+  \frac{|Ax_1+By_1+Cz_1+D|}{\sqrt{A^2+B^2+C^2}}
 \end{equation*}
 
 \textbf{Прямая в пространстве} может быть задана:
