--- a/solutions/logic/33.tex
+++ b/solutions/logic/33.tex
@@ -112,7 +112,7 @@ $
   \item Если вычисление $\mathcal{F}(i)$ завершилось с результатом 0, то $H'$ останавливается.
 \end{enumerate}
 
-Но у $\mathcal{H}$ есть свой номер $N$.
+Но у $H'$ есть свой номер $N$.
 
 Теперь рассмотрим работу $\mathcal{H'}(N)$.
 
