--- a/solutions/analysis/3.tex
+++ b/solutions/analysis/3.tex
@@ -55,8 +55,8 @@
 существует точка $c$ — общая для всех отрезков $[a_n, b_n]$, причём $a_n \to c$ и $b_n \to c$. Функция $f$ непрерывна в точке $c$, поэтому $f(c)$ является пределом
 как $f(a_n) < 0$, так и $f(b_n) \geqslant 0$. Тогда $f(c) \leqslant 0 \leqslant f(c)$, т.е. $f(c) = 0$.
 
-Докажем общий случай. Если $s$ совпадает с $f(a)$ или $f(b)$, то в качестве точки $c$ можно взять $a$ или $b$ соответственно. В противном случае рассмотрим функцию
-$g = f - s$. Функция $g$ непрерывна и $g(a)g(b) < 0$. По доказанному существует $c \in (a,b)$, что $g(c) = 0$, т.е. $f(c) = s$.
+Докажем общий случай. Если $y^*$ совпадает с $f(a)$ или $f(b)$, то в качестве точки $c$ можно взять $a$ или $b$ соответственно. В противном случае рассмотрим функцию
+$g = f - y^*$. Функция $g$ непрерывна и $g(a)g(b) < 0$. По доказанному существует $c \in (a,b)$, что $g(c) = 0$, т.е. $f(c) = y^*$.
 
 \Endproof
 
