--- a/solutions/analysis/5.tex
+++ b/solutions/analysis/5.tex
@@ -130,10 +130,12 @@
 \]
 
 Вычислим значения:
-
-- $\varphi(x) = f(x)$ (все слагаемые с $(x - t)$ обращаются в ноль),
-- $\varphi(x_0) = \sum_{k=0}^n \frac{f^{(k)}(x_0)}{k!}(x - x_0)^k$,
-- $\psi(x) = 0$, $\psi(x_0) = (x - x_0)^{n+1}$.
+\begin{enumerate}
+  \item $\varphi(x) = f(x)$ (все слагаемые с $(x - t)$ обращаются в ноль),
+  \item $\varphi(x_0) = \sum_{k=0}^n \frac{f^{(k)}(x_0)}{k!}(x - x_0)^k$,
+  \item $\psi(x) = 0$, 
+  \item $\psi(x_0) = (x - x_0)^{n+1}$.
+\end{enumerate}
 
 Подставляя, получаем:
 
