--- a/solutions/linear/16.tex
+++ b/solutions/linear/16.tex
@@ -7,7 +7,7 @@
 \begin{itemize}
   \item $\forall x, y \in \mathcal{L} \hookrightarrow x + y = y + x$
   \item $\forall x, y, z \in \mathcal{L} \hookrightarrow (x + y) + z = x + (y + z)$
-  \item $\exists 0 \in \mathcal{L}: \forall x \in \mathcal{L} \hookrightarrow x + 0 = 0 + x$
+  \item $\exists 0 \in \mathcal{L}: \forall x \in \mathcal{L} \hookrightarrow x + 0 = 0 + x = x$
   \item $\forall x \in \mathcal{L} \, \exists (-x) \in \mathcal{L}: x + (-x) = 0$
   \item $\forall \alpha, \beta \in \K, \forall x \in \mathcal{L} \hookrightarrow \alpha (\beta x) = (\alpha \beta) x$
   \item $\forall \alpha, \beta \in \K, \forall x \in \mathcal{L} \hookrightarrow (\alpha + \beta) x = \alpha x + \beta x$
