test olymp usepackage

--- a/style.tex
+++ b/style.tex
@@ -6,6 +6,7 @@
 \usepackage[T2A]{fontenc}			% кодировка
 \usepackage[utf8]{inputenc}
 \usepackage[english, russian]{babel}	% локализация и переносы
+\usepackage{olymp}
 % \usepackage{stix2}
 \usepackage{natbib}
 \usepackage{amsfonts}
@@ -49,7 +50,7 @@
 \newcommand{\Theorbd}[1]{\textbf{Теорема ({#1}) (б/д).} }
 \newcommand{\Consequence}{\textbf{Следствие.} }
 \newcommand{\Remind}{\textbf{Напоминание.} }
-\newcommand{\Note}{\textbf{Note.} }
+% \newcommand{\Note}{\textbf{Note.} }
 \newcommand{\Statement}{\textbf{Утверждение.} }
 \newcommand{\Expl}{\textbf{Объяснение.} }
 \newcommand{\Comm}{\textbf{Комментарий.} }
@@ -63,10 +64,10 @@
 \newcommand{\Alg}{\textbf{Algorithm.} }
 \newcommand{\Lemma}{\textbf{Лемма.} }
 \newcommand{\Lem}[1]{\textbf{Лемма ({#1}).} }
-\newcommand{\Example}{\textbf{Пример:} }
+% \newcommand{\Example}{\textbf{Пример:} }
 \newcommand{\Task}{\textbf{Задача.} }
 \newcommand{\Solve}{\textbf{Решение:} }
-\newcommand{\Examples}{\textbf{Примеры.} }
+% \newcommand{\Examples}{\textbf{Примеры.} }
 
 \allowdisplaybreaks[4]
 
