--- a/solutions/analysis/7.tex
+++ b/solutions/analysis/7.tex
@@ -1,13 +1,15 @@
 \subsection{Теорема о равномерной непрерывности функции, непрерывной на компакте.}
 
-\Def Множество $A$ метрического пространства $(X, \rho_X)$ называется \textit{компактным} (или \textit{компактом}), если из любой последовательности $\{x_k\} \subset A$ можно выделить подпоследовательность $\{x_{k_j}\}$, сходящуюся к некоторой точке $c \in A$.
+\Def Множество $A$ метрического пространства $(X, \rho_X)$ называется \textit{компактным} (или \textit{компактом}), если из любой последовательности $\{x_k\} \subset A$
+можно выделить подпоследовательность $\{x_{k_j}\}$, сходящуюся к некоторой точке $c \in A$.
 
-\Theor{Критерий компактности в $\mathbb{R}^n$ (лемма Гейне-Бореля)} 
+\Theor{Критерий компактности в $\mathbb{R}^n$ (лемма Гейне-Бореля)}
 Подмножество $A \subset \mathbb{R}^n$ является компактным тогда и только тогда, когда $A$ замкнуто и ограничено.
 
 \Note
-В произвольных метрических пространствах замкнутость и ограниченность множества недостаточны для компактности. Общий критерий гласит: 
-\textit{подмножество полного метрического пространства компактно тогда и только тогда, когда оно замкнуто и вполне ограничено} (для любого $\eps > 0$ существует конечное число точек, образующих $\eps$-сеть для множества). 
+В произвольных метрических пространствах замкнутость и ограниченность множества недостаточны для компактности. Общий критерий гласит:
+\textit{подмножество полного метрического пространства компактно тогда и только тогда, когда оно замкнуто и вполне ограничено} (для любого $\eps > 0$ существует конечное
+число точек, образующих $\eps$-сеть для множества).
 В $\mathbb{R}^n$ полная ограниченность эквивалентна обычной ограниченности, что делает лемму Гейне-Бореля частным случаем общего критерия.
 
 \Def Функция $f: X \to Y$ (где $X, Y$ --- произвольные метрические пространства) называется равномерно непрерывной на $M \subset X$, если
