--- a/solutions/differential/20.tex
+++ b/solutions/differential/20.tex
@@ -200,7 +200,7 @@ $y_2$ -- решения~\ref{eq:lin_diff_eq_const_coef}, то $C_1 y_1 + C_2 y_2
 
 \begin{align*}
   \sum_{s=1}^m \left(c_{2s-1} e^{\lambda_{2s-1} x} + c_{2s} e^{\lambda_{2s} x}\right) + \sum_{s=2m+1}^n c_s e^{\lambda_s x} = \\
-  = \sum_{s=1}^m \left(\overline{c}_{2s} e^{\lambda_{2s} x} + \overline{c}_{2s} e^{\lambda_{2s-1} x}\right) + \sum_{s=2m+1}^n \overline{c}_k e^{\lambda_k x}
+  = \sum_{s=1}^m \left(\overline{c}_{2s-1} e^{\lambda_{2s} x} + \overline{c}_{2s} e^{\lambda_{2s-1} x}\right) + \sum_{s=2m+1}^n \overline{c}_s e^{\lambda_s x}
 \end{align*}
 
 Пользуясь ЛНЗ системы $e^{\lambda_1 x}, \dots, e^{\lambda_n x}$, эти две суммы равны $\iff$ все коэффициенты $c$ в них равны, то есть $\overline{c}_{2s} = c_{2s-1}
