--- a/solutions/linear/15.tex
+++ b/solutions/linear/15.tex
@@ -190,7 +190,36 @@
   \frac{x-x_1}{x_2-x_2} = \frac{y-y_1}{y_2-y_1} = \frac{z-z_1}{z_2-z_1}
 \end{equation*}
 
-Формула расстояния между прямыми может быть получена из формулы расстояния от точки до плоскости. Эти операции оставляются читателю в качестве несложного домашнего упражнения.
+\textbf{Расстояние от точки до прямой в пространстве}
+
+Пусть прямая $l$ задана точкой $A$ с радиус-вектором $\mathbf{r}_0$ и направляющим вектором $\mathbf{a} \neq \mathbf{0}$, а точка $M$ имеет радиус-вектор $\mathbf{r}_1$.
+Расстояние $d$ от точки $M$ до прямой $l$ вычисляется по формуле:
+\begin{equation*}
+  d = \frac{|[(\mathbf{r}_1 - \mathbf{r}_0), \mathbf{a}]|}{|\mathbf{a}|}.
+\end{equation*}
+\Proof Рассмотрим вектор $\overrightarrow{AM} = \mathbf{r}_1 - \mathbf{r}_0$. Площадь параллелограмма, построенного на векторах $\overrightarrow{AM}$ и $\mathbf{a}$,
+равна $|[(\mathbf{r}_1 - \mathbf{r}_0), \mathbf{a}]|$. С другой стороны, эта площадь равна произведению длины основания $|\mathbf{a}|$ на высоту $d$, проведённую из
+точки $M$ к прямой $l$. Отсюда следует требуемая формула. \Endproof
+
+\textbf{Расстояние между прямыми в пространстве}
+
+\begin{enumerate}
+  \item \textbf{Параллельные прямые.} Если прямые $l_1$ и $l_2$ параллельны, то расстояние между ними равно расстоянию от произвольной точки одной прямой до другой
+    прямой, вычисляемому по формуле выше.
+
+  \item \textbf{Скрещивающиеся прямые.} Пусть прямые $l_1$ и $l_2$ заданы уравнениями:
+    \begin{equation*}
+      l_1: \mathbf{r} = \mathbf{r}_0 + \mathbf{a}t, \quad l_2: \mathbf{r} = \mathbf{r}_1 + \mathbf{b}s,
+    \end{equation*}
+    где $\mathbf{a}$ и $\mathbf{b}$ — направляющие векторы, $\mathbf{r}_0$ и $\mathbf{r}_1$ — радиус-векторы точек на прямых. Тогда расстояние $d$ между $l_1$ и $l_2$ равно:
+    \begin{equation*}
+      d = \frac{|(\mathbf{r}_1 - \mathbf{r}_0, [\mathbf{a}, \mathbf{b}])|}{|[\mathbf{a}, \mathbf{b}]|}.
+    \end{equation*}
+    \Proof Рассмотрим вектор $\overrightarrow{AB} = \mathbf{r}_1 - \mathbf{r}_0$, соединяющий точки $A \in l_1$ и $B \in l_2$. Объём параллелепипеда, построенного на
+    векторах $\mathbf{a}$, $\mathbf{b}$ и $\overrightarrow{AB}$, равен модулю смешанного произведения $|(\mathbf{r}_1 - \mathbf{r}_0, \mathbf{a}, \mathbf{b})| =
+    |(\mathbf{r}_1 - \mathbf{r}_0, [\mathbf{a}, \mathbf{b}])|$. С другой стороны, объём равен произведению площади основания $|[\mathbf{a}, \mathbf{b}]|$ (площадь
+    параллелограмма, построенного на $\mathbf{a}$ и $\mathbf{b}$) на высоту $d$, которая и является расстоянием между прямыми. Отсюда следует формула. \Endproof
+\end{enumerate}
 
 Угол между прямыми в пространстве с направляющими векторами $\mathbf{a}$ и $\mathbf{b}$ выражается как
 \begin{equation*}
