--- a/solutions/differential/21.tex
+++ b/solutions/differential/21.tex
@@ -18,8 +18,7 @@
 
 \textbf{Случай n различных собственных векторов}
 
-\Th Пусть $v_1, \dots, v_n$ -- попарно различные собственные векторы матрицы $A$, соответствующие \textbf{необязательно попарно различным} собственным значениям
-$\lambda_1, \dots, \lambda_n$.
+\Th Пусть $v_1, \dots, v_n$ -- ЛНЗ собственные векторы матрицы $A$, соответствующие \textbf{необязательно попарно различным} собственным значениям $\lambda_1, \dots, \lambda_n$.
 
 Тогда общее решение СЛОДУ имеет вид
 
@@ -42,8 +41,7 @@ $\lambda_1, \dots, \lambda_n$.
 Теперь покажем, что любое решение $x$ представимо в данном виде.
 
 Обозначим $x_0 \coloneqq x(0)$.
-Так как $v_1, \dots, v_n$ линейно независимы (в частности, это верно, если они соответствуют попарно различным собственным значениям), то они образуют базис, по которому
-можно разложить $x_0$:
+Так как $v_1, \dots, v_n$ линейно независимы, то они образуют базис, по которому можно разложить $x_0$:
 
 \begin{equation*}
   \exists c_1, \dots, c_n \in \Cmp: x_0 = \sum_{k=1}^n c_k v_k.
@@ -74,9 +72,10 @@ $\lambda_1, \dots, \lambda_n$.
 
 где $A_k, B_k, C_k \in \R$ -- произвольные коэффициенты.
 
-\Note Заметим, что в этом простейшем случае требуется, чтобы нашлось $n$ различных собственных векторов, но вовсе не обязательно должно быть $n$ различных собственных значений.
-Например, матрица системы из 2 уравнений может иметь всего одно собственное значение $\lambda$, которому соответствуют два \textbf{различных} собственных вектора $v_1, v_2$.
+\Note Заметим, что в этом простейшем случае требуется, чтобы нашлось $n$ ЛНЗ собственных векторов, но вовсе не обязательно должно быть $n$ различных собственных значений.
+Например, матрица системы из 2 уравнений может иметь всего одно собственное значение $\lambda$, которому соответствуют два ЛНЗ собственных вектора $v_1, v_2$.
 Тогда мы все еще вправе записать общее решение в виде $x(t) = C_1 e^{\lambda t} v_1 + C_2 e^{\lambda t} v_2$.
+Напомним также, что собственные векторы, соответствующие различным собственным значениям всегда линейно независимы.
 
 А вот если у какого-то из корней алгебраическая кратность не совпадает с геометрической, то есть его кратность как корня характеристического уравнения $(A - \lambda E) =
 0$ \textbf{строго больше}, чем количество соответствующих ему собственных векторов, то для нахождения общего решения необходимо использовать Жордановы цепочки, как описано ниже.
