small harmonic fixes

--- a/solutions/harmonic/14.tex
+++ b/solutions/harmonic/14.tex
@@ -16,7 +16,7 @@
 
 \begin{enumerate}
   \item $c_k (f^{(m)}) = (ik)^m c_k(f), \; k \in \Z$.
-  \item $|c_k (f)| = \overline{o}\left(\frac{1}{|k|^m}\right), \; k \to +\infty$, причем $|c_k(f)| = \frac{\gamma_k}{|k|^m}$, где $sum_{k=1}^{+\infty} \gamma_k^2 < +\infty$.
+  \item $|c_k (f)| = \overline{o}\left(\frac{1}{|k|^m}\right), \; k \to +\infty$, причем $|c_k(f)| = \frac{\gamma_k}{|k|^m}$, где $\sum_{k=1}^{+\infty} \gamma_k^2 < +\infty$.
 \end{enumerate}
 
 \Proof
